# BWIFP

./: .gitignore  BWIFP.cabal  stack.yaml
Chp1/: Main.hs
src/BWIFP/: Chp1.hs
